infrastructure/ms-a/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-a
  labels:
    app: ms-a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ms-a
  template:
    metadata:
      labels:
        app: ms-a
    spec:
      serviceAccountName: build-robot
      containers:
        - name: ms-a
          image: wassimkallel/ms-a-insat
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
          ports:
            - containerPort: 3000

          volumeMounts:
            - name: init-volume
              readOnly: true
              mountPath: "/init-data"
            - name: config-test
              mountPath: "/configuration"
              readOnly: true
            - name: mounted-volume
              mountPath: "/gl5data"
      volumes:
        - name: init-volume
          emptyDir: {}
        - name: config-test
          configMap:
            name: my-config
            items:
              - key: key2
                path: test
        - name: mounted-volume
          persistentVolumeClaim:
            claimName: block-pvc-managed-2
